# TCC-IRoNL

./: .gitignore  Contact.html  Dockerfile.base  Dockerfile.gazebo  Home.html  Method.html  README.md  Results.html  docker-compose.yml  env.tcc-ironl-denv  index.html  install_TCC-IRoNL_deps.sh  install_python_deps.sh  planner_dependencies.sh  set_permission.sh
Docker/: Dockerfile.base  Dockerfile.gazebo
Multimodal Autonomous Agents Interaction/: Contact.html  Method.html  Results.html
docs/: 2 Minutes Presentation.html  Contact.html  Home.html  Method.html  Poster.html  Results.html  index.html
gazebo_worlds/cps_lab_layout/: model.config  model.sdf
romr_ros/: CMakeLists.txt  package.xml
romr_ros/config/: realsense_camera.rviz  romr_bringup.rviz  romr_nav.rviz  romr_navigation.rviz  rviz_config.rviz
romr_ros/gazebo/: romr.trans  romr_gazebo_materials.gazebo  romr_gazebo_plugins.gazebo
romr_ros/include/: line_drawing_plugin.hpp
romr_ros/launch/: amcl.launch  controller.launch  gazebo.launch  gmapping.launch  move_base.launch  octoMap.launch  romr_bringup.launch  romr_gazebo.launch  romr_house.launch  romr_navigation.launch  romr_rviz.launch
romr_ros/maps/: cps_world.yaml  laboratory_map.yaml  romr_lab_map.yaml
romr_ros/meshes/: camerad435i.STL  camerad435i_link.STL  camerat265_link.STL  casterwheel_link.STL  imu_link.STL  leftwheel_link.STL  lidar_link.STL  rightwheel_link.STL
romr_ros/params/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
romr_ros/src/: CMakeLists.txt  TrajectoryVisualizer.cpp  imuOrientToCmdVelTranslater.cpp  odomtorobottfgenerator.cpp  package.xml  send_goals.py  send_waypoints.py  setup.py  stability_test.py
romr_ros/src/config/: joint_names_romr_robot.yaml
romr_ros/src/gazebo/: romr_gazebo_physics.gazebo
romr_ros/src/launch/: romr_bringup.launch  romr_gazebo.launch  romr_navigation.launch
romr_ros/src/maps/: cps_world.pgm  hector_laboratory_map.yaml
romr_ros/src/meshes/: camerat265.STL  casterwheel.STL  imu.STL  leftwheel.STL  lidar.STL  rightwheel.STL
romr_ros/src/params/: controller.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
romr_ros/src/scripts/: analyze_stability.py
romr_ros/src/src/: cmd_vel_watchdog.py  romr_odom_node.py  send_goals.cpp  stability_test.py
romr_ros/src/urdf/: romr_materials.xacro  romr_robot.urdf
romr_ros/src/worlds/: cps_world.world
romr_ros/urdf/: romr_assem.csv  romr_materials.xacro  romr_robot.xacro
romr_ros/worlds/: laboratory_world.world
tcc-ironl/: CMakeLists.txt  package.xml
tcc-ironl/chat_node/scripts/: chatGUI.py
tcc-ironl/evaluation/: overall_performance.py  questionnaire_responses.csv
tcc-ironl/launch/: llm_node.launch  vlm_node.launch
tcc-ironl/llm_nodes/: README.md  llmNode_launcher.sh
tcc-ironl/vlm_nodes/: README.md  vlmNode_launcher.sh
tcc_ros/: CMakeLists.txt  package.xml  setup.py
tcc_ros/config/: action_dictionary.json  config.yaml
tcc_ros/launch/: chatGUI.launch  robot_log.csv  tcc_ros.launch
tcc_ros/scripts/: chatGUI_SR.py  tcc_main.py
tcc_ros/src/tcc_ros/: action_executor.py  commands_parser.py  data_logger.py  destination_resolver.py  llm_node.py  llm_provider.py  vlm_node_SAM.py
ultralytics_ros/launch/: tracker.launch  tracker_with_cloud.launch
unitree_ros/gazebo_worlds/: CMakeLists.txt  README.md  package.xml
unitree_ros/gazebo_worlds/gazebo/worlds/: office_small.world
unitree_ros/robots/go1_description/launch/: check_joint.rviz
unitree_ros/robots/go1_description/xacro/: robot.xacro
unitree_ros/unitree_gazebo/: CMakeLists.txt
unitree_ros/unitree_gazebo/launch/: sim_bringup.launch
unitree_ros/unitree_gazebo/worlds/: stairs.world
unitree_ros/unitree_guide/unitree_guide/: CMakeLists.txt
unitree_ros/unitree_guide/unitree_move_base/launch/: move_base.launch
unitree_ros/unitree_guide/unitree_move_base/param/: costmap_common_params.yaml  detected_objects_layer.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
unitree_ros/unitree_guide/unitree_move_base/rviz/: move_base.rviz
unitree_ros/unitree_guide/unitree_navigation/launch/: navigation.launch  slam.launch
unitree_ros/unitree_guide/unitree_navigation/launch/localisation/: amcl.launch
unitree_ros/unitree_guide/unitree_navigation/launch/mapping/: gmapping.launch  hector_mapping.launch
unitree_ros/unitree_guide/unitree_navigation/maps/: cps_world.pgm  cps_world.yaml  office_small.yaml
unitree_ros/unitree_guide/unitree_navigation/rviz/: slam.rviz
